Feat: Novo Endpoint de tipo de servico
